--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css">
     <title>React Basic</title>
   </head>
-  <body></body>
+  <body>
+
+    <div class="container">
+        <div class="frame">
+          
+        </div>
+    </div>
+
+  </body>
 </html>
